<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>

    <string name="label_device_rssi">Device rssi:</string>
    <string name="label_major_number">Major Number</string>
    <string name="label_minor_number">Minor Number</string>


    <string name="pref_show_major_key" translatable="false">show_major</string>
    <string name="pref_major_default" translatable="false">6000</string>

    <string name="pref_show_minor_key" translatable="false">show_minor</string>
    <string name="pref_minor_default" translatable="false">1001</string>



    <!-- Label for the show bass checkbox preference -->
    <string name="pref_popup_label">Pop up</string>
    <string name="pref_popup_key" translatable="false">check_rssi</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_rssi_true">Shown</string>
    <string name="pref_rssi_false">Hidden</string>

    <string name="pref_rssi_key" translatable="false">rssi_value</string>
    <string name="pref_rssi_default" translatable="false">-80</string>


    <string name="pref_check_label">Sorting</string>
    <string name="pref_major_check_label">Asending</string>
    <string name="pref_minor_check_label">Desending</string>
    <string name="pref_rssi_check_label">Rssi</string>
    <string name="pref_check_key" translatable="false">Sorting</string>
    <string name="pref_major_check_value" translatable="false">1</string>
    <string name="pref_minor_check_value" translatable="false">2</string>
    <string name="pref_rssi_check_value" translatable="false">3</string>


    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
